# license_header_check

./: Jenkinsfile  LICENSE  README.md  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
docs/: conf.py  package_doc.rst
license_header_check/: __main__.py  echo_cli.py  license_header_checker.py  version.py
license_header_check/test/: __init__.py
tests/: test_echo_cli.py  test_license_header_checker.py
tools/: license_header_checker.py
