[metadata]
name = license-header-check
author = Tobias Schaffner
author_email = tobiasschaffner87@outlook.com
version = attr: license_header_check.version.__version__
description = A python license header checker.
long_description = file: README.md
keywords = license, header
license = MIT
url = https://github.com/TobiasSchaffner/license_header_check
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = license_header_check

[options.entry_points]
console_scripts =
    license-header-check = license_header_check.__main__:main

[options.data_files]
data = requirements.txt

[pycodestyle]
max-line-length = 100

[isort]
profile = black
line_length = 100

[flake8]
format = wemake
show-source = True
statistics = False
doctests = True
docstring_style = google
inline-quotes = double
max-line-length = 100

ignore =
    # Ignore whitespace before ":" to be compatible to black
    W503,
    # Allow local imports
    WPS300,
    # Allow f strings
    WPS305,
    # Do not enforce inheritance of base class "object"
    WPS306,
    # Do allow positional only arguments
    WPS451,
    # Allow asserts
    S101

per-file-ignores =
    # Allow asserts in tests
    # Do not require docstrings in tests
    # The fixture mechanism of pytest causes shadowing
    tests/*.py: WPS442,D
    # __init__ file do not need a documentation
    */__init__.py: D104
